fix: image not scale properly on mobile view

--- a/css/travel.css
+++ b/css/travel.css
@@ -1,7 +1,6 @@
 .gallery{
     display: flex;
     flex-flow: row wrap;
-    justify-content: center;
   }
   
 /* .gallery img{
